<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/tip_title"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cardview_dark_background" />

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/tip_title_input"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="#95a1aa"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/tip_detail"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cardview_dark_background" />

        <Button
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />


        <CheckBox
            android:id="@+id/solved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_solved_input"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>